Improved the GeneticAlgorithm